# Fraud_detection_using_ML

./: .env  .env.example  README.md  app.py  index.html  list_users.py  pyproject.toml  script.js  streamlit_app.py  style.css  test_import.py
CSS/: style.css
Notebook/: Fraud_detection_model_.ipynb  fraud_detection_model_.py  your_real_data.csv
Notebook/trained_models/: fraud_detection_model.pkl  fraud_detection_scaler.pkl
Python scripts/: app.py  feature_extraction.py  predict.py  routes.py
Script/: script.js
all_modules/: pyvenv.cfg
all_modules/Scripts/: activate  activate.bat  read_zbar.py
database/: schema.sql
helpers/db/: handler.py
helpers/log/: logger.py
zExamples/: example.py  example.txt
